kubernetes/apps/network/internal/adguard-home/app/exporter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-exporter
  namespace: network
  labels:
    app: adguard-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard-exporter
  template:
    metadata:
      labels:
        app: adguard-exporter
    spec:
      containers:
        - name: exporter
          image: ghcr.io/henrywhitaker3/adguard-exporter:v1.2.1
          ports:
            - containerPort: 9618
              name: metrics
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-exporter
  namespace: network
  labels:
    app: adguard-exporter
spec:
  selector:
    app: adguard-exporter
  ports:
    - port: 9618
      targetPort: metrics
      name: metrics
